Fix typo for _self
Accidentally wrote self instead of _self thereby causing the href target to default to _blank

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <!-- Source: https://www.allrecipes.com/recipe/150306/the-best-chicken-fried-steak/ -->
             <li><a href="./recipes/chickenSteak.html" target="_self" rel="noopener noreferrer">Chicken Fried Steak</a></li>
             <!-- Source: https://www.allrecipes.com/recipe/14595/salisbury-steak/ -->
-            <li><a href="./recipes/salisburySteak.html" target="self" rel="noopener noreferrer">Salisbury Steak</a></li>
+            <li><a href="./recipes/salisburySteak.html" target="_self" rel="noopener noreferrer">Salisbury Steak</a></li>
         </ul>
         <!-- About Page -->
         <p><strong><a href="./about.html" target="_self" rel="noopener noreferrer">About Page</a></strong></p>
