--- a/recipes/salisburySteak.html
+++ b/recipes/salisburySteak.html
@@ -9,6 +9,36 @@
     <h1>Salisbury Steak Recipe</h1>
     <!-- Image -->
     <img src="https://www.allrecipes.com/thmb/n7lOni5olgpyBYssICifPJRygYE=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/AR-RM-14595-salisbury-steak-ddmfs-3x4-9ed23d6ffebe4448abf1ef7e22c75e3f.jpg" alt="Image of a chicken fired steak" width="450">
+    <!-- Description -->
+    <h2>Description</h2>
+    <p>Salisbury steak with a savory onion sauce. This Salisbury steak recipe is hearty, filling, and flavorful. What more could you ask for in a comfort food favorite?</p>
+    <!-- Ingredients -->
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 ½ pounds ground beef</li>
+        <li>1 (10.5 ounce) can condensed French onion soup</li>
+        <li>½ cup dry bread crumbs</li>
+        <li>1 large egg</li>
+        <li>¼ teaspoon salt</li>
+        <li>⅛ teaspoon ground black pepper</li>
+        <li>1 tablespoon all-purpose flour</li>
+        <li>¼ cup ketchup</li>
+        <li>¼ cup water</li>
+        <li>1 tablespoon Worcestershire sauce</li>
+        <li>½ teaspoon mustard powder</li>
+    </ul>
+
+    <!-- Steps -->
+    <h2>Steps</h2>
+    <ol>
+        <li>Gather all ingredients.</li>
+        <li>Combine ground beef, 1/3 cup condensed soup, bread crumbs, egg, salt, and black pepper in a large bowl.</li>
+        <li>Shape into 6 oval patties.</li>
+        <li>Heat a large skillet over medium-high heat; add patties and brown on both sides. Drain excess fat.</li>
+        <li>Blend remaining soup and flour together in a small bowl until smooth; mix in ketchup, water, Worcestershire sauce, and mustard.</li>
+        <li>Pour soup mixture over patties in the skillet. Cover, and cook for 20 minutes, stirring occasionally.</li>
+        <li>Serve and enjoy!</li>
+    </ol>
 
     <!-- Home link -->
     <p>
