Add image to index.html
Image of a juicy rib eye steak was added to the home page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <body>
         <h1>Three Different Steak Recipes</h1>
+        <!-- Image -->
+         <img src="https://www.allrecipes.com/thmb/J7X6jJxP5C8VoNwELn2M_HBOyE0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/6964582-1dd5331c545e44bc973fb66da8db69ac.jpg" alt="Image of a juicy rib eye steak" width="400">
         <!-- Unordered list of links to recipe pages-->
         <ul>
             <!-- Source: https://www.allrecipes.com/recipe/18074/marinated-flank-steak/ -->
