--- a/recipes/salisburySteak.html
+++ b/recipes/salisburySteak.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salisbury Steak Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Salisbury Steak Recipe</h1>
